--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "not ie < 9"
   ],
   "dependencies": {
+    "date-fns": "4.1.0",
     "motion": "12.9.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
